feat(ui): update ui branding and ANML claim layout
Update app branding and align ANML claim screens with desktop styling.
Rename application label to "Earth Network" and switch to adaptive launcher
assets (mipmap adaptive foreground/background). Make status bar white with
dark icons to match the new background.

Restyle ANML claim activity and fragment:
- switch backgrounds to desktop_bg and add desktop-specific button colors
- replace btn_desktop with btn_anml_desktop, center and enlarge the Register
  button, increase text size and use anml_button_text color
- clear any background tint in ANMLClaimFragment at runtime to ensure the
  drawable renders as designed

Other UI adjustments:
- remove sidebar drawable from Actions button
- lock primary activities to portrait orientation in AndroidManifest
- update ic_launcher_foreground to use adaptive foreground bitmap
- add new color resources for desktop_bg, anml_button_text, and
  anml_button_border

These changes harmonize the mobile UI with the web/desktop design and fix
tinting issues so ANML assets display correctly.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Passport Scanner</string>
+    <string name="app_name">Earth Network</string>
     <string name="scan_passport">Scan Passport</string>
     <string name="place_passport">Place your passport on the back of the device</string>
     <string name="scanning">Scanning passport…</string>
