feat(wallet): add multi-wallet support and wallet list UI
Introduce multi-wallet storage and management using a wallets JSON array
stored in secure preferences and a selected_wallet_index. Add a dedicated
WalletListActivity/Fragment and integrate it with HostActivity so the
wallet management UI can be shown without losing bottom navigation.

Update wallet creation and access flows:
- CreateWalletActivity now appends new wallets to the wallets array,
  reuses an existing global PIN when present, and stores selected index
  and top-level wallet_name for compatibility.
- CreateWalletActivity hashes and stores a global PIN if none exists.
- WalletActivity and WalletFragment are refactored to read from the
  wallets array (with a fallback to legacy top-level mnemonic/wallet_name)
  and to defer add/show-mnemonic operations to the WalletList UI.
- ANMLClaimActivity now prefers the selected wallet mnemonic from the
  wallets array and falls back to legacy mnemonic storage.

UI and resource updates:
- activity_wallet layout simplified: remove inline add/show mnemonic UI,
  add current_wallet_arrow trigger, adjust title and wallet name styling.
- add wallet row colors and rename branding strings (app_name and
  wallet_title => Earth Wallet).
- AndroidManifest declares WalletListActivity.

These changes enable multiple wallets per user while preserving backward
compatibility with the previous single-mnemonic storage.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Earth Network</string>
+    <string name="app_name">Earth Wallet</string>
     <string name="scan_passport">Scan Passport</string>
     <string name="place_passport">Place your passport on the back of the device</string>
     <string name="scanning">Scanning passport…</string>
@@ -23,7 +23,7 @@
     <string name="backend_url">http://192.168.1.145:8000/api/verify</string>
     
     <!-- Wallet strings -->
-    <string name="wallet_title">Secret Wallet</string>
+    <string name="wallet_title">Earth Wallet</string>
     <string name="mnemonic_hint">Mnemonic (12/24 words)</string>
     <string name="generate_mnemonic">Generate</string>
     <string name="derive_address">Derive</string>
@@ -34,7 +34,7 @@
     <string name="balance_label">Balance</string>
     <string name="refresh">Refresh</string>
     <string name="wallet_note">This minimal wallet derives a Secret address and fetches SCRT balance. Transactions and viewing keys are not included.</string>
-    <string name="open_wallet">Open Secret Wallet</string>
+    <string name="open_wallet">Open Earth Wallet</string>
 
     <!-- Bottom navigation -->
     <string name="nav_wallet">Wallet</string>
