feat(anml): add registration rewards display and affiliate referral system
- Add backend base URL constant and update registration hash
- Display registration rewards with ERTH price conversion in USD
- Implement QR code scanning for affiliate address input
- Add affiliate address field to registration form
- Integrate ERTH price fetching from backend API
- Update network security config for new backend domain
- Remove hardcoded backend URLs in favor of centralized constant

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,7 @@
     <string name="enter_mrz_data">Enter MRZ Data</string>
 
     <!-- Added for backend verification UI/config -->
-    <string name="verification_results">Verification Results</string>
-    <string name="backend_url">http://192.168.1.145:8000/api/verify</string>
+    <string name="verification_results">Verification Results</string>non
     
     <!-- Wallet strings -->
     <string name="wallet_title">Earth Wallet</string>
