refactor(wallet): refactor token balance queries to use coroutines
Replace queue-based token balance querying with coroutines for improved
cancellability and lifecycle management. Add completion callbacks to wallet
loading for better navigation timing. Update passport scanning string for
clarity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Earth Wallet</string>
     <string name="scan_passport">Scan Passport</string>
-    <string name="place_passport">Place your passport on the back of the device</string>
+    <string name="place_passport">Place the inside of the back cover of the passport on the back of the device</string>
     <string name="scanning">Scanning passport…</string>
     <string name="scan_complete">Scan Complete</string>
     <string name="passport_number">Passport Number</string>
